# ds4linux

./: .gitignore  COPYING  Makefile  Makefile.am  Makefile.in  configure.ac
bluetooth/: bluetooth.c  bluetooth.h  ds4_bt.c  ds4_bt.h
client/: client.c  client.h  client_py.c  setup.py
controller/: ds4.c  ds4.h
ipc/: shm.c
network/: network.py
shm/: ds4_data.c  ds4_data.h  shm.c  shm.h
spi/: spi_test
tools/: control.c  ds4_client.c  ds4_conn.c  ds4_daemon.c  ds4_link.c  ds4_sync.c  fakecontrol.c  i2c_daemon.c
uavtalk/: crc.h  manualcontrol.c  manualcontrol.h  uavtalkheader.c  uavtalkheader.h
usb/: ds4_usb.c  ds4_usb.h  list_usb.c
